LsfStreamer: Removed usage of Java 9 API.